<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ords</artifactId>
   <name>ORDS</name>
   <groupId>uk.ac.ox.ords</groupId>
   <version>1.0.16</version>
   <packaging>pom</packaging>
   <developers>
      <developer>
         <name>Dave Paine</name>
         <email>david.paine@it.ox.ac.uk</email>
      </developer>
      <developer>
         <name>Scott Wilson</name>
         <email>scott.wilson@it.ox.ac.uk</email>
      </developer>
      <developer>
         <name>Kris Popat</name>
         <email>kjpopat@gmail.com</email>
      </developer>
   </developers>
   <dependencies>
       
       <dependency>
       		<groupId>uk.ac.ox.it.ords</groupId>
          <artifactId>ords-database-structure-api</artifactId>
          <version>0.0.1-SNAPSHOT</version>
          <type>war</type>
       </dependency>
       
       <dependency>
       		<groupId>uk.ac.ox.it.ords</groupId>
       		<artifactId>ords-database-api</artifactId>
       		<version>0.0.1-SNAPSHOT</version>
       		<type>war</type>
       </dependency>
	   
	   <dependency>
          <groupId>uk.ac.ox.it.ords</groupId>
          <artifactId>ords-project-api</artifactId>
          <version>0.0.1-SNAPSHOT</version>
          <type>war</type>
       </dependency>

	   <dependency>
          <groupId>uk.ac.ox.it.ords</groupId>
          <artifactId>ords-statistics-api</artifactId>
          <version>0.0.1-SNAPSHOT</version>
          <type>war</type>
       </dependency>
       	   
	   <dependency>
          <groupId>uk.ac.ox.it.ords</groupId>
          <artifactId>ords-user-api</artifactId>
          <version>0.0.1-SNAPSHOT</version>
          <type>war</type>
       </dependency>
       
       <dependency>
          <groupId>uk.ac.ox.it.ords</groupId>
          <artifactId>ords-audit-api</artifactId>
          <version>0.0.1-SNAPSHOT</version>
          <type>war</type>
       </dependency>
	   
	   <dependency>
          <groupId>uk.ac.ox.it.ords</groupId>
          <artifactId>ui</artifactId>
          <version>0.0.1-SNAPSHOT</version>
          <type>war</type>
       </dependency>
   </dependencies>
	   
   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>org.codehaus.cargo</groupId>
               <artifactId>cargo-maven2-plugin</artifactId>
               <version>1.4.12</version>
               <configuration>
                  <!-- Container configuration -->
                  <container>
                     <containerId>tomcat8x</containerId>
                     <zipUrlInstaller>
                        <downloadDir>${settings.localRepository}/org/codehaus/cargo/cargo-container-archives</downloadDir>
                        <url>http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.18/bin/apache-tomcat-8.0.18.zip</url>
                     </zipUrlInstaller>
                  </container>
                  <!-- Configuration to use with the container or the deployer -->
                  <configuration>
                     <type>standalone</type>
                     <home>${project.build.directory}/tomcat8x</home>
                     <properties>
                        <cargo.servlet.port>8080</cargo.servlet.port>
                        <cargo.tomcat.manager.url>http://localhost:8080/manager</cargo.tomcat.manager.url>
                        <cargo.remote.username>admin</cargo.remote.username>
                        <cargo.remote.password>password</cargo.remote.password>
                        <cargo.jvmargs>
							-Xdebug
							-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8001
							-Xnoagent
							-Djava.compiler=NONE
							-Xmx512m
							-XX:MaxPermSize=256m
						</cargo.jvmargs>
                     </properties>
                  </configuration>
                  <deployables>
					  <deployable>
					  	<groupId>uk.ac.ox.it.ords</groupId>
					  	<artifactId>ords-database-api</artifactId>
					  	<type>war</type>
					  	<properties>
					  		<context>/api/1.0/database</context>
					  	</properties>
					  </deployable>
                      <deployable>
			         	 <groupId>uk.ac.ox.it.ords</groupId>
			          	<artifactId>ords-database-structure-api</artifactId>
			          	<type>war</type>
                        <properties>
                           <context>/api/1.0/structure</context>
                        </properties>
				  	</deployable>
                    <deployable>
		         	 <groupId>uk.ac.ox.it.ords</groupId>
		          	<artifactId>ords-project-api</artifactId>
		          	<type>war</type>
                      <properties>
                         <context>/api/1.0/project</context>
                      </properties>
			  	      </deployable>
					  
                      <deployable>
  		         	 <groupId>uk.ac.ox.it.ords</groupId>
  		          	<artifactId>ords-user-api</artifactId>
  		          	<type>war</type>
                        <properties>
                           <context>/api/1.0/user</context>
                        </properties>
  			  	      </deployable>
  			  	      
  			  	    <deployable>
  		         	 <groupId>uk.ac.ox.it.ords</groupId>
  		          	<artifactId>ords-statistics-api</artifactId>
  		          	<type>war</type>
                        <properties>
                           <context>/api/1.0/statistics</context>
                        </properties>
  			  	      </deployable>
  			  	      
  			  	     <deployable>
  		         	 <groupId>uk.ac.ox.it.ords</groupId>
  		          	<artifactId>ords-audit-api</artifactId>
  		          	<type>war</type>
                        <properties>
                           <context>/api/1.0/audit</context>
                        </properties>
  			  	      </deployable>
					  
                      <deployable>
  		         	 <groupId>uk.ac.ox.it.ords</groupId>
  		          	<artifactId>ui</artifactId>
  		          	<type>war</type>
                        <properties>
                           <context>/app</context>
                        </properties>
  			  	      </deployable>
					  
                  </deployables>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jar-plugin</artifactId>
               <version>2.4</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>2.15</version>
               <configuration>
                  <excludes>
                     <exclude>**/*IntegrationTest2.java</exclude>
                  </excludes>
               </configuration>
            </plugin>
            <plugin>
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.1</version>
               <!-- This was 3.1 but has been set to 2.0 to help Sysdev since Debian doesn't 
						have anything later than this in their package manager -->
               <configuration>
                  <source>1.7</source>
                  <target>1.7</target>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-resources-plugin</artifactId>
               <version>2.4.3</version>
               <configuration>
                  <encoding>${project.build.sourceEncoding}</encoding>
               </configuration>
            </plugin>
         </plugins>
      </pluginManagement>
      <finalName>${project.artifactId}</finalName>
   </build>
</project>